# kraken_obsolete

control_server/: CMakeLists.txt
control_server/include/control_server/: AuvController.h  ControlServer.h
control_server/src/: test_action_lib.cpp
controller_basic/: CMakeLists.txt  package.xml
controller_basic/docs/: controllerConfig-usage.dox  controllerConfig.dox  controllerConfig.wikidoc
controller_basic/include/controller_basic/: ControlParameters.h  StateController.h
vision_gui/: CMakeLists.txt  Gui.Pro
vision_gui/include/ImageNew/: mainwindow.hpp
vision_gui/src/: mainwindow.cpp
